--- a/app/views/templates/navbars/_mensajes.html.erb
+++ b/app/views/templates/navbars/_mensajes.html.erb
@@ -14,7 +14,7 @@
       </h6>
       <a class="dropdown-item d-flex align-items-center" href="#">
         <div class="dropdown-list-image mr-3">
-          <img class="rounded-circle" src="assets/undraw_profile_1.svg"
+          <img class="rounded-circle" src="#"
                alt="...">
           <div class="status-indicator bg-success"></div>
         </div>
@@ -26,7 +26,7 @@
       </a>
       <a class="dropdown-item d-flex align-items-center" href="#">
         <div class="dropdown-list-image mr-3">
-          <img class="rounded-circle" src="assets/undraw_profile_2.svg"
+          <img class="rounded-circle" src="#"
                alt="...">
           <div class="status-indicator"></div>
         </div>
@@ -38,7 +38,7 @@
       </a>
       <a class="dropdown-item d-flex align-items-center" href="#">
         <div class="dropdown-list-image mr-3">
-          <img class="rounded-circle" src="assets/undraw_profile_3.svg"
+          <img class="rounded-circle" src="#"
                alt="...">
           <div class="status-indicator bg-warning"></div>
         </div>
@@ -50,7 +50,7 @@
       </a>
       <a class="dropdown-item d-flex align-items-center" href="#">
         <div class="dropdown-list-image mr-3">
-          <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
+          <img class="rounded-circle" src="#"
                alt="...">
           <div class="status-indicator bg-success"></div>
         </div>
