--- a/app/views/templates/_sidebar.html.erb
+++ b/app/views/templates/_sidebar.html.erb
@@ -1,17 +1,21 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
   <!-- Sidebar -->
-  <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+  <ul class="navbar-nav bg-gradient-success sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
-    <a>
-      <%= link_to root_path, class: "sidebar-brand d-flex align-items-center justify-content-center" do %>
-        <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
+    <div class="bg-gradient-success">
+      <br>
+      <div class="sidebar-brand d-flex align-items-center justify-content-center">
+        <div class="sidebar-brand-icon rotate-n-90">
+          <img class="img-profile rounded-circle" src="assets/avatar.png" style="border: 2px solid white;" width="70" height="70">
+          <br>
+          <span class="sidebar-brand-text mx-3" style="font-size: medium;">SB Admin 2</span>
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
-      <% end %>
-    </a>
+      </div>
+      <br>
+    </div>
 
+    
     <!-- Divider -->
     <hr class="sidebar-divider my-0">
 
@@ -86,11 +90,13 @@
     </div>
 
     <!-- Sidebar Message -->
+    <!--
     <div class="sidebar-card d-none d-lg-flex">
-      <img class="sidebar-card-illustration mb-2" src="assets/undraw_rocket.svg" alt="...">
+      <img class="sidebar-card-illustration mb-2" src="#" alt="...">
       <p class="text-center mb-2"><strong>SB Admin Pro</strong> is packed with premium features, components, and more!</p>
       <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
     </div>
+    -->
 
   </ul>
   <!-- End of Sidebar -->
