Se comento la alineacion de botones y busqueda.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,8 @@ table>tbody>tr>td {
 }
 
 /*para alinear los botones y cuadro de busqueda*/
+/*
 .btn-group, .btn-group-vertical {
     position: absolute !important;
 }
+*/
