Se comentario navbars.

--- a/app/views/templates/_navbar.html.erb
+++ b/app/views/templates/_navbar.html.erb
@@ -1,11 +1,11 @@
 <!-- Topbar Navbar -->
 <ul class="navbar-nav ml-auto">
     <!-- Nav Item - Search Dropdown (Visible Only XS) -->
-    <%= render partial: 'templates/navbars/search_mensajes' %>
+    <!--<= render partial: 'templates/navbars/search_mensajes' %>-->
     <!-- Nav Item - Alerts -->
-    <%= render partial: 'templates/navbars/alertas' %>
+    <!--<= render partial: 'templates/navbars/alertas' %>-->
     <!-- Nav Item - Messages -->
-    <%= render partial: 'templates/navbars/mensajes' %>
+    <!--<= render partial: 'templates/navbars/mensajes' %>-->
     <!-- Nav Item - User Information -->
     <%= render partial: 'templates/navbars/informacion' %>
 </ul>
