Se mejoro el template.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,24 +21,7 @@
 //@import "datatables/media/css/jquery.dataTables";
 @import "datatables.net-bs4/css/dataTables.bootstrap4";
 @import "datatables.net-buttons-bs4/css/buttons.bootstrap4";
-
+@import "estilos";
  
 @import "font_awesome5_webfont";
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');
-
-
-/*estilos para la tabla*/
-table th {
-    background-color: #029B4E !important;
-    color: white;
-}
-table>tbody>tr>td {
-    vertical-align: middle !important;
-}
-
-/*para alinear los botones y cuadro de busqueda*/
-/*
-.btn-group, .btn-group-vertical {
-    position: absolute !important;
-}
-*/
