--- a/app/views/templates/_footer.html.erb
+++ b/app/views/templates/_footer.html.erb
@@ -2,8 +2,8 @@
 <footer class="sticky-footer bg-white">
     <div class="container my-auto">
       <div class="copyright text-center my-auto">
-        <span>Copyright &copy; Your Website 2021</span>
+        <span>Copyright &copy; Your Website 2021</span><%= Time.now.year %>
       </div>
     </div>
   </footer>
-  <!-- End of Footer -->
+<!-- End of Footer -->
