--- a/app/views/templates/topbars/_search.html.erb
+++ b/app/views/templates/topbars/_search.html.erb
@@ -1,3 +1,4 @@
+<!--<button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>-->
 <!-- Topbar Search -->
 <form
   class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
