Se importo select2 y sb-admin-2

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,8 @@
  *= require_self
  */
 
-
-@import "startbootstrap-sb-admin-2/css/sb-admin-2";
+@import "sb-admin-2";
+//@import "startbootstrap-sb-admin-2/css/sb-admin-2";
 @import "startbootstrap-sb-admin-2/node_modules/bootstrap/dist/css/bootstrap";
 @import "@ttskch/select2-bootstrap4-theme/dist/select2-bootstrap4";
 //@import "datatables/media/css/jquery.dataTables";
@@ -25,3 +25,6 @@
  
 @import "font_awesome5_webfont";
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');
+@import "select2/dist/css/select2";
+
+//@import "sweetalert2/dist/sweetalert2";
