Se agregaron metodo de activacion de clases

--- a/app/views/templates/_sidebar.html.erb
+++ b/app/views/templates/_sidebar.html.erb
@@ -3,24 +3,21 @@
   <!-- Sidebar -->
   <ul class="navbar-nav bg-gradient-success sidebar sidebar-dark accordion" id="accordionSidebar">
     <!-- Sidebar - Brand -->
-    <div class="bg-gradient-success">
-      <br>
-      <div class="sidebar-brand d-flex align-items-center justify-content-center">
-        <div class="sidebar-brand-icon rotate-n-90">
-          <img class="img-profile rounded-circle" src="assets/avatar.png" style="border: 2px solid white;" width="70" height="70">
-          <br>
-          <span class="sidebar-brand-text mx-3" style="font-size: medium;">SB Admin 2</span>
-        </div>
+    <br>
+    <div class="sidebar-brand d-flex align-items-center justify-content-center">
+      <div class="sidebar-brand-icon rotate-n-90">
+        <img class="img-profile rounded-circle" src="assets/avatar.png" style="border: 2px solid white;" width="70" height="70">
+        <br>
+        <span class="sidebar-brand-text mx-3" style="font-size: small;"><%= current_user.email %></span>
       </div>
-      <br>
     </div>
-
+    <br>
 
     <!-- Divider -->
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
+    <li class="<%= is_home_active() %>">
       <a>
         <%= link_to root_path, class: "nav-link" do %>
           <i class="fas fa-home"></i>
@@ -58,28 +55,35 @@
     <%= render partial: 'templates/sidebars/documentos' %>
 
     <!-- Divider -->
+    <!--
     <hr class="sidebar-divider">
-    <!-- Heading -->
+     Heading
     <div class="sidebar-heading">
       Addons
     </div>
 
-    <!-- Nav Item - Pages Collapse Menu -->
-    <%= render partial: 'templates/sidebars/pages' %>
+    Nav Item - Pages Collapse Menu
+
+    <= render partial: 'templates/sidebars/pages' %>
+    -->
 
     <!-- Nav Item - Charts -->
+    <!--
     <li class="nav-item">
       <a class="nav-link" href="charts.html">
         <i class="fas fa-fw fa-chart-area"></i>
         <span>Charts</span></a>
     </li>
+    -->
 
     <!-- Nav Item - Tables -->
+    <!--
     <li class="nav-item">
       <a class="nav-link" href="tables.html">
         <i class="fas fa-fw fa-table"></i>
         <span>Tables</span></a>
     </li>
+    -->
 
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
