--- a/app/views/areas/_form.html.erb
+++ b/app/views/areas/_form.html.erb
@@ -1,47 +1,73 @@
-<%= form_with(model: area, local: true) do |form| %>
-  <% if area.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(area.errors.count, "error") %> prohibited this area from being saved:</h2>
+<!-- Inicio empresas -->
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h4 class="m-0 font-weight-bold text-secondary">Gestión de atributos</h4>
+  </div>
+  <div class="card-body">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
 
-      <ul>
-        <% area.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+          <%= form_with(model: area, local: true) do |form| %>
+            <div class="row">
+              <div class="col-md-4">
+              </div>
+              <div class="col-md-4">
+
+                <% if area.errors.any? %>
+                  <div id="error_explanation">
+                    <h2><%= pluralize(area.errors.count, "error") %> prohibited this area from being saved:</h2>
+
+                    <ul>
+                      <% area.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>
+                      <% end %>
+                    </ul>
+                  </div>
+                <% end %>
+
+                <div class="form-group">
+                  <%= form.label :empresa_id %>
+                  <%= collection_select(:area, :empresa_id, Empresa.where(:estado => 'A'), :id, :nombre, {:prompt => "Seleccione Una Empresa"}, {:class => "form-control select2", autofocus:true, required: true}) %>
+                </div>
+
+                <div class="form-group">
+                  <%= form.label :nombre %>
+                  <%= form.text_field :nombre, class:"form-control", type: "txt", placeholder: "Ingrese solo letras", autofocus:true, required: true, pattern: "^[A-Za-zñÑáéíóúÁÉÍÓÚ- \s]+$" %>
+                </div>
+
+                <div class="form-row">
+                  <%= form.label :descripcion %>
+                  <%= form.text_area :descripcion, size: '40x5', class:"form-control", type: "txt", placeholder: "", required: true %>
+                </div>
+              </div>
+                <div class="col-md-4">
+                </div>
+            </div>
+            <br><br>
+
+            <div class="actions">
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <%= button_tag form.submit, class: "btn btn-outline-success btn-sm" do %>
+                  <span class="icon text-green-50">
+                  <i class="fas fa-edit"></i>
+                  </span>
+                    <span class="text"><%= titulo_area.upcase %></span>
+                  <%end%>
+                  <%= link_to areas_url, class: "btn btn-outline-danger btn-sm" do %>
+                  <span class="icon text-red-50">
+                  <i class="fas fa-arrow-circle-left"></i>
+                  </span>
+                    <span class="text">CANCELAR</span>
+                  <%end%>
+                </div>
+              </div>
+            </div>
+
+          <% end %>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :nombre %>
-    <%= form.text_field :nombre %>
   </div>
-
-  <div class="field">
-    <%= form.label :descripcion %>
-    <%= form.text_area :descripcion %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_created_id %>
-    <%= form.number_field :user_created_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_updated_id %>
-    <%= form.number_field :user_updated_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :estado %>
-    <%= form.text_field :estado %>
-  </div>
-
-  <div class="field">
-    <%= form.label :empresa_id %>
-    <%= form.text_field :empresa_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
