Se creo scaffold de menu roles

--- a/app/views/menu_roles/_form.html.erb
+++ b/app/views/menu_roles/_form.html.erb
@@ -1,47 +1,73 @@
-<%= form_with(model: menu_rol, local: true) do |form| %>
-  <% if menu_rol.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(menu_rol.errors.count, "error") %> prohibited this menu_rol from being saved:</h2>
+<!-- Inicio empresas -->
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h4 class="m-0 font-weight-bold text-secondary">Gestión de atributos</h4>
+  </div>
+  <div class="card-body">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
 
-      <ul>
-        <% menu_rol.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+          <%= form_with(model: menu_rol, local: true) do |form| %>
+            <div class="row">
+              <div class="col-md-4">
+              </div>
+              <div class="col-md-4">
+
+                <% if menu_rol.errors.any? %>
+                  <div id="error_explanation">
+                    <h2><%= pluralize(menu_rol.errors.count, "error") %> Prohibido que se guarde este item:</h2>
+
+                    <ul>
+                      <% menu_rol.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>
+                      <% end %>
+                    </ul>
+                  </div>
+                <% end %>
+
+                <div class="form-group">
+                  <%= form.label :menu %>
+                  <%= collection_select(:menu, :menu_id, Menu.where(:estado => 'A').order(:nombre), :id, :nombre,  {:prompt => "Seleccione un Menú"}, {:class => "form-control select2", :required => ''}) %>
+                </div>
+
+                <div class="form-group">
+                  <%= form.label :opcion %>
+                  <%= form.grouped_collection_select(:opcion_id, Menu.where(:estado => 'A').order(:nombre), :opciones, :nombre, :id, :nombre, {:prompt => "Seleccione una Área"}, {:class => "form-control select2", :required => '', :type => "select"}) %>
+                </div>
+
+                <div class="form-group">
+                  <%= form.label :rol %>
+                  <%= form.collection_select(:rol_id, Rol.where(:estado => 'A'), :id, :nombre,  {:prompt => "Seleccione un Rol"}, {:class => "form-control select2", :required => ''}) %>
+                </div>
+              </div>
+                <div class="col-md-4">
+                </div>
+            </div>
+            <br><br>
+
+            <div class="actions">
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <%= button_tag form.submit, class: "btn btn-outline-success btn-sm" do %>
+                  <span class="icon text-green-50">
+                  <i class="fas fa-edit"></i>
+                  </span>
+                    <span class="text"><%= titulo_menu_rol.upcase %></span>
+                  <%end%>
+                  <%= link_to menu_roles_url, class: "btn btn-outline-danger btn-sm" do %>
+                  <span class="icon text-red-50">
+                  <i class="fas fa-arrow-circle-left"></i>
+                  </span>
+                    <span class="text">CANCELAR</span>
+                  <%end%>
+                </div>
+              </div>
+            </div>
+
+          <% end %>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :menu_padre %>
-    <%= form.number_field :menu_padre %>
   </div>
-
-  <div class="field">
-    <%= form.label :user_created_id %>
-    <%= form.number_field :user_created_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_updated_id %>
-    <%= form.number_field :user_updated_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :estado %>
-    <%= form.text_field :estado %>
-  </div>
-
-  <div class="field">
-    <%= form.label :rol_id %>
-    <%= form.text_field :rol_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :opcion_id %>
-    <%= form.text_field :opcion_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
