--- a/app/views/menu_roles/new.html.erb
+++ b/app/views/menu_roles/new.html.erb
@@ -1,5 +1,1 @@
-<h1>New Menu Rol</h1>
-
-<%= render 'form', menu_rol: @menu_rol %>
-
-<%= link_to 'Back', menu_roles_path %>
+<%= render 'form', menu_rol: @menu_rol, titulo_menu_rol: 'Registrar' %>
