--- a/app/views/menu_roles/edit.html.erb
+++ b/app/views/menu_roles/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing Menu Rol</h1>
-
-<%= render 'form', menu_rol: @menu_rol %>
-
-<%= link_to 'Show', @menu_rol %> |
-<%= link_to 'Back', menu_roles_path %>
+<%= render 'form', menu_rol: @menu_rol, titulo_menu_rol: 'Actualizar' %>
