--- a/app/views/menu_roles/index.html.erb
+++ b/app/views/menu_roles/index.html.erb
@@ -1,37 +1,64 @@
-<p id="notice"><%= notice %></p>
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h4 class="m-0 font-weight-bold text-secondary">Gestión de atributos</h4>
+  </div>
+  <div class="card-body">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
 
-<h1>Menu Roles</h1>
+          <div class="col-md-12 text-right">
+            <%= link_to new_menu_rol_path, class: "btn btn-outline-success btn-sm" do %>
+                <span class="icon text-green-50">
+                  <i class="fas fa-plus-circle"></i>
+                </span>
+              <span class="text">AGREGAR</span>
+            <%end%>
 
-<table>
-  <thead>
-    <tr>
-      <th>Menu padre</th>
-      <th>User created</th>
-      <th>User updated</th>
-      <th>Estado</th>
-      <th>Rol</th>
-      <th>Opcion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <%= link_to root_path, class: "btn btn-outline-danger btn-sm" do %>
+                <span class="icon text-red-50">
+                  <i class="fas fa-home"></i>
+                </span>
+              <span class="text">INICIO</span>
+            <%end%>
+          </div>
+          <br>
 
-  <tbody>
-    <% @menu_roles.each do |menu_rol| %>
-      <tr>
-        <td><%= menu_rol.menu_padre %></td>
-        <td><%= menu_rol.user_created_id %></td>
-        <td><%= menu_rol.user_updated_id %></td>
-        <td><%= menu_rol.estado %></td>
-        <td><%= menu_rol.rol_id %></td>
-        <td><%= menu_rol.opcion_id %></td>
-        <td><%= link_to 'Show', menu_rol %></td>
-        <td><%= link_to 'Edit', edit_menu_rol_path(menu_rol) %></td>
-        <td><%= link_to 'Destroy', menu_rol, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <div class="col-md-12 table-responsive">
+            <table id="example" class="table table-striped table-sm table-responsive-sm table-hover table-borderes cell-border" cellspacing="0" style="width:100%">
+              <thead class="text-white">
+                <tr>
+                  <th>Rol</th>
+                  <th>Opcion</th>
+                  <th>Menu</th>
+                  <th>Estado</th>
+                  <th>Opciones</th>
+                </tr>
+              </thead>
 
-<br>
+              <tbody>
+                <% @menu_roles.each do |menu_rol| %>
+                  <tr>
+                    <td><%= menu_rol.rol.nombre %></td>
+                    <td><%= menu_rol.opcion.nombre %></td>
+                    <td><%= menu_rol.opcion.menu.nombre %></td>
+                    <td><%= menu_rol.estado %></td>
 
-<%= link_to 'New Menu Rol', new_menu_rol_path %>
+                    <td class=" text-center">
+                      <%= link_to edit_menu_rol_path(menu_rol), class: "btn btn-outline-info btn-sm" do %>
+                        <i class="fas fa-edit"></i>
+                      <%end%>
+                      <%= link_to  inactivar_menu_rol_path(:id => menu_rol.id), class: "btn btn-outline-danger btn-sm ", data: { confirm: 'Se eliminara' } do %>
+                        <i class="fas fa-trash-alt"></i>
+                      <%end%>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
