--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,6 +1,1 @@
-<h1>Editing Rol</h1>
-
-<%= render 'form', rol: @rol %>
-
-<%= link_to 'Show', @rol %> |
-<%= link_to 'Back', roles_path %>
+<%= render 'form', rol: @rol, titulo_rol: 'Actualizar' %>
