--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,35 +1,63 @@
-<p id="notice"><%= notice %></p>
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h4 class="m-0 font-weight-bold text-secondary">Gestión de atributos</h4>
+  </div>
+  <div class="card-body">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
 
-<h1>Roles</h1>
+          <div class="col-md-12 text-right">
+            <%= link_to new_rol_path, class: "btn btn-outline-success btn-sm" do %>
+                <span class="icon text-green-50">
+                  <i class="fas fa-plus-circle"></i>
+                </span>
+              <span class="text">AGREGAR</span>
+            <%end%>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Descripcion</th>
-      <th>User created</th>
-      <th>User updated</th>
-      <th>Estado</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <%= link_to root_path, class: "btn btn-outline-danger btn-sm" do %>
+                <span class="icon text-red-50">
+                  <i class="fas fa-home"></i>
+                </span>
+              <span class="text">INICIO</span>
+            <%end%>
+          </div>
+          <br>
 
-  <tbody>
-    <% @roles.each do |rol| %>
-      <tr>
-        <td><%= rol.nombre %></td>
-        <td><%= rol.descripcion %></td>
-        <td><%= rol.user_created_id %></td>
-        <td><%= rol.user_updated_id %></td>
-        <td><%= rol.estado %></td>
-        <td><%= link_to 'Show', rol %></td>
-        <td><%= link_to 'Edit', edit_rol_path(rol) %></td>
-        <td><%= link_to 'Destroy', rol, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <div class="col-md-12 table-responsive">
+            <table id="example" class="table table-striped table-sm table-responsive-sm table-hover table-borderes cell-border" cellspacing="0" style="width:100%">
+              <thead class="text-white">
+                <tr>
+                  <th>Nombre</th>
+                  <th>Descripcion</th>
+                  <th class=" text-center">Estado</th>
+                  <th class=" text-center">Opciones</th>
+                </tr>
+              </thead>
 
-<br>
+              <tbody>
+                <% @roles.each do |rol| %>
+                  <tr>
+                    <td><%= rol.nombre %></td>
+                    <td><%= rol.descripcion %></td>
+                    <td class=" text-center"><%= rol.estado %></td>
 
-<%= link_to 'New Rol', new_rol_path %>
+                    <td class=" text-center">
+                      <%= link_to edit_rol_path(rol), class: "btn btn-outline-info btn-sm" do %>
+                        <i class="fas fa-edit"></i>
+                      <%end%>
+                      <%= link_to  inactivar_rol_path(:id => rol.id), class: "btn btn-outline-danger btn-sm ", data: { confirm: 'Se eliminara' } do %>
+                        <i class="fas fa-trash-alt"></i>
+                      <%end%>
+                    </td>
+
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
