--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,5 +1,1 @@
-<h1>New Rol</h1>
-
-<%= render 'form', rol: @rol %>
-
-<%= link_to 'Back', roles_path %>
+<%= render 'form', rol: @rol, titulo_rol: 'Registrar' %>
