Se mejoro la vista de usuarios

--- a/app/views/usuarios/agregar_usuario.html.erb
+++ b/app/views/usuarios/agregar_usuario.html.erb
@@ -1,2 +1,93 @@
-<h1>Usuarios#agregar_usuario</h1>
-<p>Find me in app/views/usuarios/agregar_usuario.html.erb</p>
+<!-- Formulario Usuarios -->
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h6 class="m-0 font-weight-bold text-primary">Registro Usuarios</h6>
+  </div>
+  <div class="card-body">
+    <%= simple_form_for :usuario_form, :url => {:controller => "usuarios", :action => "crear_usuario"}, string: :string_wrapper, boolean: :boolean_wrapper do |f| %>
+
+      <div class="row">
+        <div class="col-md-12">
+          <h4>
+            Datos Personales
+          </h4>
+          <div class="row">
+            <div class="col-md-6">
+              <%= f.input :nombre, autofocus: true, input_html: {class:"form-control", type: "txt", placeholder: "Ingrese solo letras", required: true, pattern: "^[A-Za-zñÑáéíóúÁÉÍÓÚ \s]+$"}  %>
+            </div>
+            <div class="col-md-6">
+              <%= f.input :apellido, input_html: {class:"form-control", type: "txt", placeholder: "Ingrese solo letras", required: true, pattern: "^[A-Za-zñÑáéíóúÁÉÍÓÚ \s]+$"} %>
+            </div>
+          </div>
+          <br />
+          <div class="row">
+            <div class="col-md-6">
+              <%= f.input :telefono, input_html: {class:"form-control", type: "", maxlength: "8", placeholder: "Ingrese 8 dígitos", required: true, pattern: "^[0-9]{8}$"} %>
+            </div>
+            <div class="col-md-6">
+              <%= f.input :direccion, input_html: {class:"form-control", type: "txt", placeholder: "", required: true }%>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <br />
+          <h4>
+            Datos de Autenticación
+          </h4>
+          <div class="row">
+            <div class="col-md-6">
+              <%= f.label "Correo Electrónico" %><br />
+              <%= f.email_field :email, autocomplete: "email" ,class: "form-control form-control-user", placeholder: "ejemplo@gmail.com", required: true %>
+            </div>
+            <div class="col-md-6">
+              <%= f.label "Clave" %>
+              <%= f.password_field :password, autocomplete: "new-password", minlength: "6",class: "form-control form-control-user", required: true, placeholder: "Minimo 6 caracteres" %>
+            </div>
+          </div>
+          <%= f.hidden_field :estado, :value => "A" %>
+          <%= f.hidden_field :user_created_id, :value => current_user.id %>
+          <br>
+          <h4>
+            Asignación de Área
+          </h4>
+          <div class="row">
+            <div class="col-md-6">
+              <%= f.input  :empresa_id, collection: Empresa.where(:estado => 'A').limit(10), label_method: :informacion_empresa, value_method: :id, label: "Seleccione una empresa", prompt: "Buscar una empresa", input_html: {class: 'select2-empresa', 'data-endpoint': search_empresa_path, required: true} %>
+            </div>
+            <div class="col-md-6">
+              <%= f.input  :area_id, collection: Area.where(:estado => 'A').limit(10), label_method: :nombre_area_empresa, value_method: :id, label: "Seleccione una área", prompt: "Buscar una área", input_html: {class: 'select2-area', 'data-endpoint': search_areas_path, required: true} %>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-right">
+          <br>
+          <br>
+
+            <%= button_tag f.submit, class: "btn btn-outline-success btn-sm" do %>
+              <span class="icon text-50">
+                <i class="fas fa-edit"></i>
+              </span>
+              <span class="text">REGISTRAR</span>
+            <%end%>
+
+          <%= link_to usuarios_index_path, class: "btn btn-outline-danger btn-sm" do %>
+        <span class="icon text-red-50">
+          <i class="fas fa-arrow-circle-left"></i>
+        </span>
+            <span class="text">CANCELAR</span>
+          <%end%>
+
+        </div>
+      </div>
+    <% end %>
+
+  </div>
+
+</div>
+<br>
+<br>
