--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -1,2 +1,63 @@
-<h1>Usuarios#index</h1>
-<p>Find me in app/views/usuarios/index.html.erb</p>
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h4 class="m-0 font-weight-bold text-secondary">Gestión de menus</h4>
+  </div>
+  <div class="card-body">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+
+          <div class="col-md-12 text-right">
+            <%= link_to usuarios_agregar_usuario_path, class: "btn btn-outline-success btn-sm" do %>
+              <span class="icon text-50">
+                  <i class="fas fa-plus-circle"></i>
+              </span>
+              <span class="text">AGREGAR</span>
+            <%end%>
+
+            <%= link_to root_path, class: "btn btn-outline-danger btn-sm" do %>
+              <span class="icon text-red-50">
+                  <i class="fas fa-home"></i>
+              </span>
+              <span class="text">INICIO</span>
+            <%end%>
+          </div>
+          <br>
+
+          <div class="col-md-12 table-responsive">
+            <table id="example" class="table table-striped table-sm table-responsive-sm table-hover table-borderes cell-border" cellspacing="0" style="width:100%">
+              <thead class="text-white">
+                  <tr>
+                    <th>Nombre</th>
+                    <th class=" text-center">Teléfono</th>
+                    <th>Dirección</th>
+                    <th>User</th>
+                    <th class=" text-center">Estado</th>
+                    <th class=" text-center">Opciones</th>
+
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <% @personas.each do |p| %>
+                    <tr>
+                      <td> <%= "#{p.nombre} #{p.apellido}" %> </td>
+                      <td class=" text-center"> <%= p.telefono %> </td>
+                      <td> <%= p.direccion %> </td>
+                      <td> <%= p.user.email %> </td>
+                      <td class=" text-center"> <%= p.estado %> </td>
+
+                      <td class=" text-center">
+                        <%= link_to  inactivar_usuario_path(:id => p.id), class: "btn btn-outline-danger btn-sm ", data: { confirm: 'Se eliminara' } do %>
+                          <i class="fas fa-trash-alt"></i>
+                        <%end%>
+                      </td>
+                    </tr>
+                  <% end %>
+                  </tbody>
+                </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
