--- a/app/views/personas_areas/index.html.erb
+++ b/app/views/personas_areas/index.html.erb
@@ -10,6 +10,7 @@
       <th>Estado</th>
       <th>Area</th>
       <th>Persona</th>
+      <th>Email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,8 +21,9 @@
         <td><%= personas_area.user_created_id %></td>
         <td><%= personas_area.user_updated_id %></td>
         <td><%= personas_area.estado %></td>
-        <td><%= personas_area.area_id %></td>
-        <td><%= personas_area.persona_id %></td>
+        <td><%= personas_area.area.nombre %></td>
+        <td><%= personas_area.persona.nombre %></td>
+        <td><%= personas_area.persona.user.email %></td>
         <td><%= link_to 'Show', personas_area %></td>
         <td><%= link_to 'Edit', edit_personas_area_path(personas_area) %></td>
         <td><%= link_to 'Destroy', personas_area, method: :delete, data: { confirm: 'Are you sure?' } %></td>
